--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/text_view_deconnexion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pas de connexion internet"
+        android:layout_centerInParent="true"/>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/relative_layout_meteo">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,9 +29,9 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/text_view_city_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/city_name"
                 android:textColor="@color/text_color"
                 android:textSize="@dimen/city_name_dimen" />
 
@@ -64,4 +75,5 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="15dp"/>
+</RelativeLayout>
 </RelativeLayout>
