--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,31 +67,6 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/button1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="20dp"
-            android:background="@color/colorPrimary"
-            android:text="Bouton1"
-            android:textColor="@color/black"
-            android:onClick="buttonClicked"/>
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:background="@color/colorPrimary"
-            android:text="Bouton2"
-            android:textColor="@color/black"/>
-
-        <Button
-            android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -99,8 +74,8 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="20dp"
             android:background="@color/colorPrimary"
-            android:text="Bouton3"
+            android:text="@string/favorite_button"
             android:textColor="@color/black"
-            android:onClick="buttonClicked"/>
+            android:onClick="favoriteClicked"/>
     </RelativeLayout>
 </RelativeLayout>
