--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,6 +66,15 @@
 
         </LinearLayout>
 
+        <EditText
+            android:id="@+id/edit_text_saisie"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Votre message"
+            android:layout_centerInParent="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="150dp"/>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
