--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -9,9 +9,9 @@
     tools:showIn="@layout/activity_favorite">
 
     <TextView
+        android:id="@+id/text_view_message_saisi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="Activity Text" />
+        android:layout_margin="@dimen/text_margin"/>
 
 </androidx.core.widget.NestedScrollView>
