--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/text_view_deconnexion"
@@ -75,16 +76,15 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="150dp"/>
 
-        <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginRight="15dp"
-            android:layout_marginBottom="20dp"
-            android:background="@color/colorPrimary"
-            android:text="@string/favorite_button"
-            android:textColor="@color/black"
-            android:onClick="favoriteClicked"/>
+            android:layout_alignParentRight="true"
+            android:backgroundTint="@color/colorPrimary"
+            app:tint="@color/red"
+            android:src="@drawable/ic_baseline_favorite_24"
+            android:layout_margin="16dp" />
     </RelativeLayout>
 </RelativeLayout>
