--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#F53D16</color>
     <color name="text_color">#24445C</color>
     <color name="background">#A9EAFE</color>
     <color name="colorPrimary">#F7E269  </color>
