--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="city_name_dimen">30dp</dimen>
-    <dimen name="city_temperature_dimen">50dp</dimen>
+    <dimen name="city_temperature_dimen">30dp</dimen>
+    <dimen name="weather_description_dimen">15dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
