--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,9 +38,9 @@
                     android:textSize="@dimen/city_name_dimen" />
 
                 <TextView
+                    android:id="@+id/text_view_weather_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/city_desc"
                     android:textColor="@color/text_color" />
             </LinearLayout>
 
@@ -51,16 +51,16 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/image_view_weather_icon"
                     android:layout_width="100dp"
-                    android:layout_height="100dp"
-                    android:src="@drawable/weather_sunny_white" />
+                    android:layout_height="100dp"/>
 
                 <TextView
+                    android:id="@+id/text_view_city_temp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginLeft="150dp"
-                    android:text="@string/city_temp"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/city_temperature_dimen" />
             </LinearLayout>
